--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.6.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "dayjs": "^1.11.13",
+    "pg": "^8.14.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "typeorm": "^0.3.21"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -22,6 +28,7 @@
     "@nx/js": "20.6.0",
     "@nx/nest": "20.6.0",
     "@nx/node": "20.6.0",
+    "@nx/react": "^20.6.0",
     "@nx/web": "20.6.0",
     "@nx/webpack": "20.6.0",
     "@nx/workspace": "20.6.0",
