--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^11.0.0",
+    "@react-router/node": "^7.2.0",
+    "@react-router/serve": "^7.2.0",
+    "@tailwindcss/vite": "^4.0.14",
+    "@tanstack/react-query": "^5.68.0",
     "axios": "^1.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.13",
+    "isbot": "^4.4.0",
     "pg": "^8.14.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router": "^7.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "tailwindcss": "^4.0.14",
     "typeorm": "^0.3.21"
   },
   "devDependencies": {
@@ -29,18 +38,35 @@
     "@nx/nest": "20.6.0",
     "@nx/node": "20.6.0",
     "@nx/react": "^20.6.0",
+    "@nx/vite": "20.6.0",
     "@nx/web": "20.6.0",
     "@nx/webpack": "20.6.0",
     "@nx/workspace": "20.6.0",
+    "@react-router/dev": "^7.2.0",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/react": "16.1.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "~18.16.9",
+    "@types/node": "^20.0.0",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^3.0.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
     "nx": "20.6.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
@@ -48,6 +74,8 @@
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
+    "vite": "^6.0.0",
+    "vitest": "^3.0.0",
     "webpack-cli": "^5.1.4"
   }
 }
