--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,7 @@
   },
   "sideEffects": false,
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
     "isbot": "^4.4.0",
