--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "axios": "^1.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "isbot": "^4.4.0",
+    "lucide-react": "^0.482.0",
     "pg": "^8.14.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router": "^7.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
+    "tailwindcss-animate": "^1.0.7",
     "typeorm": "^0.3.21"
   },
   "devDependencies": {
