feat: init repostories

--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "tackito-web",
+  "name": "keepcloud-web",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/web/src",
   "projectType": "application",
