--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tackito/source",
+  "name": "@keepcloud/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
@@ -21,7 +21,9 @@
     "dayjs": "^1.11.13",
     "isbot": "^4.4.0",
     "lucide-react": "^0.482.0",
+    "nanoid": "^5.1.5",
     "pg": "^8.14.0",
+    "radash": "^12.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router": "^7.2.0",
@@ -72,6 +74,7 @@
     "jest-environment-node": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "20.6.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
