--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "tackito-api",
+  "name": "keepcloud-api",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/api/src",
   "projectType": "application",
@@ -22,15 +22,15 @@
       "defaultConfiguration": "development",
       "dependsOn": ["build"],
       "options": {
-        "buildTarget": "tackito-api:build",
+        "buildTarget": "keepcloud-api:build",
         "runBuildTargetDependencies": false
       },
       "configurations": {
         "development": {
-          "buildTarget": "tackito-api:build:development"
+          "buildTarget": "keepcloud-api:build:development"
         },
         "production": {
-          "buildTarget": "tackito-api:build:production"
+          "buildTarget": "keepcloud-api:build:production"
         }
       }
     },
