--- a/nx.json
+++ b/nx.json
@@ -81,5 +81,12 @@
         "linter": "eslint"
       }
     }
+  },
+  "targetDefaults": {
+    "@nx/js:tsc": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
+    }
   }
 }
