--- a/package.json
+++ b/package.json
@@ -7,21 +7,30 @@
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^11.0.0",
+    "@react-oauth/google": "^0.12.1",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "^5.68.0",
-    "axios": "^1.6.0",
+    "@types/passport-jwt": "^4.0.1",
+    "axios": "^1.8.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "google-auth-library": "^9.15.1",
     "isbot": "^4.4.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.482.0",
     "nanoid": "^5.1.5",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.14.0",
     "radash": "^12.1.0",
     "react": "19.0.0",
@@ -58,6 +67,7 @@
     "@testing-library/react": "16.1.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.0.0",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@vitejs/plugin-react": "^4.2.0",
