--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
     "tailwindcss-animate": "^1.0.7",
-    "typeorm": "^0.3.21"
+    "typeorm": "^0.3.21",
+    "universal-cookie": "^8.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
