Refactor package.json dependencies and update component aliases in components.json

--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -11,8 +11,11 @@
     "prefix": ""
   },
   "aliases": {
-    "@utils": "apps/web/libs/utils",
-    "@components": "apps/web/app/components"
+    "components": "@/components",
+    "utils": "@/lib/utils",
+    "ui": "@/components/ui",
+    "lib": "@/lib",
+    "hooks": "@/hooks"
   },
   "iconLibrary": "lucide"
 }
