--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^11.0.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-oauth/google": "^0.12.1",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
