--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.0",
+    "vite-plugin-svgr": "^4.3.0",
     "vitest": "^3.0.0",
     "webpack-cli": "^5.1.4"
   }
