--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,7 @@
       "@keepcloud/commons/constants": [
         "libs/commons/src/lib/constants/index.ts"
       ],
+      "@keepcloud/commons/dtos": ["libs/commons/src/lib/dtos/index.ts"],
       "@keepcloud/commons/helpers": ["libs/commons/src/lib/helpers/index.ts"],
       "@keepcloud/commons/helpers/backend": [
         "libs/commons/helpers/backend/src/index.ts"
@@ -29,7 +30,8 @@
       "@keepcloud/core/services": ["libs/core/services/src/index.ts"],
       "@keepcloud/files/api": ["libs/files/api/src/index.ts"],
       "@keepcloud/iam/api": ["libs/iam/api/src/index.ts"],
-      "@keepcloud/users/api": ["libs/users/api/src/index.ts"]
+      "@keepcloud/users/api": ["libs/users/api/src/index.ts"],
+      "@keepcloud/web-core/react": ["libs/core/web/react/src/index.ts"]
     }
   },
   "include": ["./env.d.ts", "**/*.ts"],
