--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dayjs": "^1.11.13",
     "google-auth-library": "^9.15.1",
     "isbot": "^4.4.0",
+    "jotai": "^2.12.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.482.0",
     "nanoid": "^5.1.5",
@@ -47,6 +48,8 @@
     "universal-cookie": "^8.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
