--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,7 +21,9 @@
         "libs/commons/src/lib/constants/index.ts"
       ],
       "@keepcloud/commons/dtos": ["libs/commons/src/lib/dtos/index.ts"],
-      "@keepcloud/commons/helpers": ["libs/commons/src/lib/helpers/index.ts"],
+      "@keepcloud/commons/helpers": [
+        "libs/commons/src/lib/helpers/shared/index.ts"
+      ],
       "@keepcloud/commons/helpers/backend": [
         "libs/commons/helpers/backend/src/index.ts"
       ],
