Update sidebar functionality and add new components

--- a/components.json
+++ b/components.json
@@ -5,18 +5,17 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "apps/web/app/styles/globals.css",
-    "cssYO": "src/styles/globals.css",
+    "css": "apps/web/app/styles/global.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
     "components": "@/components",
-    "utils": "@/lib/utils",
+    "utils": "libs/core/web/react/src/lib/utils",
     "ui": "libs/core/web/react/src/lib/components/ui",
     "lib": "@/lib",
-    "hooks": "@/hooks"
+    "hooks": "libs/core/web/react/src/lib/hooks"
   },
   "iconLibrary": "lucide"
 }
