--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^11.0.0",
+    "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.10",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.3",
     "@react-oauth/google": "^0.12.1",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
@@ -32,7 +35,7 @@
     "isbot": "^4.4.0",
     "jotai": "^2.12.3",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.482.0",
+    "lucide-react": "^0.501.0",
     "nanoid": "^5.1.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
