--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
+  "prisma": {
+    "schema": "libs/core/db/src/lib/schema"
+  },
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
@@ -11,6 +14,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^11.0.0",
+    "@prisma/client": "^6.6.0",
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-collapsible": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.10",
@@ -42,6 +46,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.14.0",
+    "prisma": "^6.6.0",
     "radash": "^12.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
