--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-avatar": "^1.1.6",
+    "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-collapsible": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -28,6 +29,7 @@
     "@react-router/serve": "^7.2.0",
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "^5.68.0",
+    "@tanstack/react-table": "^8.21.3",
     "@types/passport-jwt": "^4.0.1",
     "axios": "^1.8.4",
     "class-transformer": "^0.5.1",
@@ -36,6 +38,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "dayjs": "^1.11.13",
+    "filesize": "^10.1.6",
     "google-auth-library": "^9.15.1",
     "isbot": "^4.4.0",
     "jotai": "^2.12.3",
