--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "schema": "libs/core/db/src/lib/schema"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^11.0.0",
@@ -18,12 +19,15 @@
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-collapsible": "^1.1.7",
-    "@radix-ui/react-dialog": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.10",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.3",
+    "@radix-ui/react-visually-hidden": "^1.2.0",
     "@react-oauth/google": "^0.12.1",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
@@ -37,6 +41,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "filesize": "^10.1.6",
     "google-auth-library": "^9.15.1",
@@ -52,7 +57,9 @@
     "prisma": "^6.6.0",
     "radash": "^12.1.0",
     "react": "19.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.56.1",
     "react-router": "^7.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
@@ -60,7 +67,8 @@
     "tailwindcss": "^4.0.14",
     "tailwindcss-animate": "^1.0.7",
     "typeorm": "^0.3.21",
-    "universal-cookie": "^8.0.1"
+    "universal-cookie": "^8.0.1",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
