--- a/apps/web/tsconfig.app.json
+++ b/apps/web/tsconfig.app.json
@@ -26,6 +26,6 @@
     "src/**/*.test.ts"
   ],
   "compilerOptions": {
-    "types": ["node", "vite/client"]
+    "types": ["node", "vite/client", "../../types.d.ts"]
   }
 }
