--- a/apps/web/tsconfig.app.json
+++ b/apps/web/tsconfig.app.json
@@ -10,7 +10,8 @@
     "**/.server/**/*.ts",
     "**/.server/**/*.tsx",
     "**/.client/**/*.ts",
-    "**/.client/**/*.tsx"
+    "**/.client/**/*.tsx",
+    ".react-router/types/**/*"
   ],
   "exclude": [
     "tests/**/*.spec.ts",
@@ -26,6 +27,7 @@
     "src/**/*.test.ts"
   ],
   "compilerOptions": {
+    "rootDirs": [".", "./.react-router/types"],
     "types": ["node", "vite/client", "../../types.d.ts"]
   }
 }
