Add migration_lock.toml and subscriptionPlan.prisma, delete author.prisma and post.prisma, and create new models: sharedFile.prisma, user.prisma, and file.prisma

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {},
   "private": true,
   "prisma": {
-    "schema": "libs/core/db/src/lib/schema"
+    "schema": "libs/core/db/src/lib/schema",
+    "seed": "ts-node --project libs/core/db/tsconfig.json libs/core/db/src/lib/schema/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
