--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.501.0",
     "nanoid": "^5.1.5",
+    "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -66,6 +67,7 @@
     "react-router": "^7.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
     "tailwindcss-animate": "^1.0.7",
