--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.8",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-collapsible": "^1.1.7",
@@ -28,7 +29,7 @@
     "@radix-ui/react-popover": "^1.1.10",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.3",
     "@radix-ui/react-visually-hidden": "^1.2.0",
