--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tanstack/react-query": "^5.68.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/passport-jwt": "^4.0.1",
+    "async_hooks": "^1.0.0",
     "axios": "^1.8.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
