--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "seed": "ts-node --project libs/core/db/tsconfig.json libs/core/db/src/lib/schema/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.817.0",
+    "@aws-sdk/s3-presigned-post": "^3.817.0",
+    "@aws-sdk/s3-request-presigner": "^3.817.0",
     "@hookform/resolvers": "^5.0.1",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
@@ -49,7 +52,6 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "filesize": "^10.1.6",
     "google-auth-library": "^9.15.1",
     "isbot": "^4.4.0",
     "jotai": "^2.12.3",
@@ -76,6 +78,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typeorm": "^0.3.21",
     "universal-cookie": "^8.0.1",
+    "winston": "^3.17.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
